Fri Oct 22 11:44:40 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.h:
          Removed export macro not needed

Fri Oct 22 11:36:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.cpp:
          Regenerated with -Gex -Gexr and added user code again

Fri Oct 22 11:39:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/GeneratedExec/Hello_MyFoo_objA_conn_i.h:
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/GeneratedExec/Hello_MyFoo_objA_conn_i.cpp:
          Added generated implementation of the Reply Handler

Fri Oct 22 11:20:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/Publisher_T.cpp:
          Layout

        * tests/Bug_3769_Regression/Bug_3769_Regression.mpc:
        * tests/Bug_3890_Regression:
        * tests/Bug_3890_Regression/Bug_3890_Regression.mpc:
        * tests/Bug_3769_Regression/Foo.mpc:
        * tests/Bug_3890_Regression/Foo.mpc:
          Make mpc filenames similar to the test

Fri Oct 22 10:35:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/GeneratedExec/Hello_Receiver_comp_exec.h:
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/GeneratedExec/Hello_Receiver_comp_exec.cpp:
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/GeneratedExec/Hello_Sender_comp_exec.h:
        * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/GeneratedExec/Hello_Sender_comp_exec.cpp:
          Regenerated, using the latest version of the IDL compiler.

Fri Oct 22 10:28:42 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/Shapes_Control_comp/src/Shapes_Control_comp_exec.cpp: