@@ -26,19 +26,26 @@ namespace CIAO_CoherentUpdate_Test_Sender_Impl
   }
 
   //============================================================
-  // Restarter_exec_i
+  // Facet Executor Implementation Class: restart_updater_exec_i
   //============================================================
-  Restarter_exec_i::Restarter_exec_i (Sender_exec_i & callback)
-    : callback_ (callback)
+
+  restart_updater_exec_i::restart_updater_exec_i (
+        ::CoherentUpdate_Test::CCM_Sender_Context_ptr ctx,
+        Sender_exec_i & callback)
+    : ciao_context_ (
+        ::CoherentUpdate_Test::CCM_Sender_Context::_duplicate (ctx)),
+      callback_ (callback)
   {
   }
 
-  Restarter_exec_i::~Restarter_exec_i (void)
+  restart_updater_exec_i::~restart_updater_exec_i (void)
   {
   }
+
+  // Operations from ::CoherentUpdateRestarter
 
   void
-  Restarter_exec_i::restart_update ()
+  restart_updater_exec_i::restart_update (void)
   {
     this->callback_.restart ();
   }
@@ -46,59 +53,66 @@ namespace CIAO_CoherentUpdate_Test_Sender_Impl
   //============================================================
   // Component Executor Implementation Class: Sender_exec_i
   //============================================================
+
   Sender_exec_i::Sender_exec_i (void)
     : iterations_ (3),
       run_ (1),
       total_iter (0),
       wh_ (0)
   {
+    ACE_NEW_THROW_EX (this->wh_,
+                      WriteHandler (*this),
+                      CORBA::INTERNAL ());
   }
 
   Sender_exec_i::~Sender_exec_i (void)
   {
-  }
-
-  void
-  Sender_exec_i::restart (void)
-  {
-    ++this->run_;
     delete this->wh_;
-    ACE_NEW_THROW_EX (this->wh_,
-                      WriteHandler (*this),
-                      CORBA::INTERNAL ());
-    this->context_->get_CCM_object()->_get_orb ()->orb_core ()->reactor ()->notify (this->wh_);
   }
 
-  void
-  Sender_exec_i::start (void)
+  // Supported operations and attributes.
+  ACE_Reactor*
+  Sender_exec_i::reactor (void)
   {
-    if (! ::CORBA::is_nil (this->starter_))
+    ACE_Reactor* reactor = 0;
+    ::CORBA::Object_var ccm_object =
+      this->ciao_context_->get_CCM_object();
+    if (! ::CORBA::is_nil (ccm_object.in ()))
       {
-        this->starter_->set_reader_properties (this->iterations_);
+        ::CORBA::ORB_var orb = ccm_object->_get_orb ();
+        if (! ::CORBA::is_nil (orb.in ()))
+          {
+            reactor = orb->orb_core ()->reactor ();
+          }
       }
-    else
+    if (reactor == 0)
       {
-        ACE_ERROR ((LM_ERROR, ACE_TEXT ("ERROR: Unable to start the reader\n")));
+        throw ::CORBA::INTERNAL ();
+      }
+    return reactor;
+  }
+
+  // Component attributes and port operations.
+
+  ::CCM_CoherentUpdateRestarter_ptr
+  Sender_exec_i::get_restart_updater (void)
+  {
+    if ( ::CORBA::is_nil (this->ciao_restart_updater_.in ()))
+      {
+        restart_updater_exec_i *tmp = 0;
+        ACE_NEW_RETURN (
+          tmp,
+          restart_updater_exec_i (
+            this->ciao_context_.in (),
+            *this),
+            ::CCM_CoherentUpdateRestarter::_nil ());
+
+          this->ciao_restart_updater_ = tmp;
       }
 
-    ACE_DEBUG ((LM_DEBUG, "Start run <%d> with <%u> iterations\n",
-                          this->run_,
-                          this->iterations ()));
-
-    CoherentUpdateTestSeq update_many_seq;
-    update_many_seq.length (this->iterations_);
-    for (int i = 1; i < this->iterations_ + 1; ++i)
-      {
-        CoherentUpdateTest new_key;
-        new_key.symbol = CORBA::string_dup(SAMPLE_KEY_NAME);
-        new_key.iteration = ++total_iter;
-        update_many_seq[i-1] = new_key;
-      }
-    this->updater_->update_many (update_many_seq);
-    ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("Written <%u> keys uptil now\n"),
-                total_iter));
-    ACE_OS::sleep (2);
-    this->starter_->start_read (this->run_);
+    return
+      ::CCM_CoherentUpdateRestarter::_duplicate (
+        this->ciao_restart_updater_.in ());
   }
 
   ::CORBA::UShort
@@ -108,24 +122,22 @@ namespace CIAO_CoherentUpdate_Test_Sender_Impl
   }
 
   void
-  Sender_exec_i::iterations (::CORBA::UShort iterations)
+  Sender_exec_i::iterations (
+    const ::CORBA::UShort iterations)
   {
     this->iterations_ = iterations;
   }
 
-  ::CCM_CoherentUpdateRestarter_ptr
-  Sender_exec_i::get_restart_updater (void)
-  {
-    return new Restarter_exec_i (*this);
-  }
+  // Operations from Components::SessionComponent.
 
   void
-  Sender_exec_i::set_session_context (::Components::SessionContext_ptr ctx)
+  Sender_exec_i::set_session_context (
+    ::Components::SessionContext_ptr ctx)
   {
-    this->context_ =
+    this->ciao_context_ =
       ::CoherentUpdate_Test::CCM_Sender_Context::_narrow (ctx);
 
-    if ( ::CORBA::is_nil (this->context_.in ()))
+    if ( ::CORBA::is_nil (this->ciao_context_.in ()))
       {
         throw ::CORBA::INTERNAL ();
       }
@@ -141,20 +153,17 @@ namespace CIAO_CoherentUpdate_Test_Sender_Impl
   {
     try
       {
-        this->updater_ = this->context_->get_connection_info_update_data ();
-        this->updater_->is_coherent_write (true);
+        ::CoherentUpdate_Test::Updater_var updater =
+          this->ciao_context_->get_connection_info_update_data ();
+        updater->is_coherent_write (true);
 
-        //first create an instance for consecutive updating.
+        // First create an instance for consecutive updating.
         CoherentUpdateTest new_key;
         new_key.symbol = CORBA::string_dup(SAMPLE_KEY_NAME);
         new_key.iteration = 0;
-        this->updater_->create_one (new_key);
+        updater->create_one (new_key);
 
-        this->starter_ = this->context_->get_connection_start_reader ();
-        ACE_NEW_THROW_EX (this->wh_,
-                          WriteHandler (*this),
-                          CORBA::INTERNAL ());
-        this->context_->get_CCM_object()->_get_orb ()->orb_core ()->reactor ()->notify (this->wh_);
+        this->reactor ()->notify (this->wh_);
       }
     catch (const ::CORBA::Exception& ex)
       {
@@ -177,7 +186,55 @@ namespace CIAO_CoherentUpdate_Test_Sender_Impl
   void
   Sender_exec_i::ccm_remove (void)
   {
+  }
+
+  void
+  Sender_exec_i::restart (void)
+  {
+    ++this->run_;
     delete this->wh_;
+    ACE_NEW_THROW_EX (this->wh_,
+                      WriteHandler (*this),
+                      CORBA::INTERNAL ());
+    this->reactor ()->notify (this->wh_);
+  }
+
+  void
+  Sender_exec_i::start (void)
+  {
+    ::CoherentUpdateStarter_var starter =
+        this->ciao_context_->get_connection_start_reader ();
+
+    if (! ::CORBA::is_nil (starter.in ()))
+      {
+        starter->set_reader_properties (this->iterations_);
+      }
+    else
+      {
+        ACE_ERROR ((LM_ERROR, ACE_TEXT ("ERROR: Unable to start the reader\n")));
+      }
+
+    ACE_DEBUG ((LM_DEBUG, "Start run <%d> with <%u> iterations\n",
+                          this->run_,
+                          this->iterations ()));
+
+    CoherentUpdateTestSeq update_many_seq;
+    update_many_seq.length (this->iterations_);
+    for (int i = 1; i < this->iterations_ + 1; ++i)
+      {
+        CoherentUpdateTest new_key;
+        new_key.symbol = CORBA::string_dup(SAMPLE_KEY_NAME);
+        new_key.iteration = ++total_iter;
+        update_many_seq[i-1] = new_key;
+      }
+
+    ::CoherentUpdate_Test::Updater_var updater =
+        this->ciao_context_->get_connection_info_update_data ();
+    updater->update_many (update_many_seq);
+    ACE_DEBUG ((LM_DEBUG, ACE_TEXT ("Written <%u> keys uptil now\n"),
+                total_iter));
+    ACE_OS::sleep (2);
+    starter->start_read (this->run_);
   }
 
   extern "C" SENDER_EXEC_Export ::Components::EnterpriseComponent_ptr
